# CrazyStuff

./: CMakeLists.txt  bad_inheritance_cast.cpp  global_virtual_obj.cpp  interface_wrapper.cpp  lambda_visitor.cpp  lambda_visitor2.cpp  polymorphic_vector.cpp  rangesv3_ptree.cpp  templatetest.cpp  value_concepts.cpp
boost_patches/: write.hpp
rusty_crypto/: Cargo.toml
rusty_crypto/src/: homomorphic.rs  main.rs
